Updated guide to MP Rest Client 1.3 (#97)
* Updated to features in mp rest client 1.3

* More updates for mpRestClient 1.3

* Minor changes

* Formatted java classes

* Addressed dev content review feedback

* Addressed SME review feedback

* Added links for CDI and RestClientBuilder

* Minor changes