@@ -13,36 +13,45 @@
 // tag::manager[]
 package io.openliberty.guides.inventory;
 
-import java.net.URL;
 import java.net.ConnectException;
+import java.net.URI;
 import java.net.UnknownHostException;
-import java.net.MalformedURLException;
-import javax.ws.rs.ProcessingException;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
-import javax.inject.Inject;
+
 import javax.enterprise.context.ApplicationScoped;
+import javax.inject.Inject;
+import javax.ws.rs.ProcessingException;
+
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.eclipse.microprofile.rest.client.RestClientBuilder;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
+
+import io.openliberty.guides.inventory.client.SystemClient;
+import io.openliberty.guides.inventory.client.UnknownUriException;
+import io.openliberty.guides.inventory.client.UnknownUriExceptionMapper;
 import io.openliberty.guides.inventory.model.InventoryList;
 import io.openliberty.guides.inventory.model.SystemData;
-import io.openliberty.guides.inventory.client.SystemClient;
-import io.openliberty.guides.inventory.client.UnknownUrlException;
-import io.openliberty.guides.inventory.client.UnknownUrlExceptionMapper;
 
+// tag::ApplicationScoped[]
 @ApplicationScoped
+// end::ApplicationScoped[]
 public class InventoryManager {
 
   private List<SystemData> systems = Collections.synchronizedList(new ArrayList<>());
   private final String DEFAULT_PORT = System.getProperty("default.http.port");
 
+  // tag::Inject[]
   @Inject
+  // end::Inject[]
+  // tag::RestClient[]
   @RestClient
+  // end::RestClient[]
+  // tag::SystemClient[]
   private SystemClient defaultRestClient;
+  // end::SystemClient[]
 
   public Properties get(String hostname) {
     Properties properties = null;
@@ -69,43 +78,49 @@ public class InventoryManager {
     return new InventoryList(systems);
   }
 
+  // tag::getPropertiesWithDefaultHostName[]
   private Properties getPropertiesWithDefaultHostName() {
     try {
+      // tag::defaultRCGetProperties[]
       return defaultRestClient.getProperties();
-    } catch (UnknownUrlException e) {
-      System.err.println("The given URL is unreachable.");
+      // end::defaultRCGetProperties[]
+    } catch (UnknownUriException e) {
+      System.err.println("The given URI is not formatted correctly.");
     } catch (ProcessingException ex) {
       handleProcessingException(ex);
     }
     return null;
   }
+  // end::getPropertiesWithDefaultHostName[]
 
-  // tag::builder[]
+  // tag::getPropertiesWithGivenHostName[]
   private Properties getPropertiesWithGivenHostName(String hostname) {
-    String customURLString = "http://" + hostname + ":" + DEFAULT_PORT + "/system";
-    URL customURL = null;
+    String customURIString = "http://" + hostname + ":" + DEFAULT_PORT + "/system";
+    URI customURI = null;
     try {
-      customURL = new URL(customURLString);
+      customURI = URI.create(customURIString);
+      // tag::customRestClientBuilder[]
       SystemClient customRestClient = RestClientBuilder.newBuilder()
-                                         .baseUrl(customURL)
-                                         .register(UnknownUrlExceptionMapper.class)
-                                         .build(SystemClient.class);
+                                          .baseUri(customURI)
+                                          .register(UnknownUriExceptionMapper.class)
+                                          .build(SystemClient.class);
+      // end::customRestClientBuilder[]
+      // tag::customRCGetProperties[]
       return customRestClient.getProperties();
+      // end::customRCGetProperties[]
     } catch (ProcessingException ex) {
       handleProcessingException(ex);
-    } catch (UnknownUrlException e) {
-      System.err.println("The given URL is unreachable.");
-    } catch (MalformedURLException e) {
-      System.err.println("The given URL is not formatted correctly.");
+    } catch (UnknownUriException e) {
+      System.err.println("The given URI is unreachable.");
     }
     return null;
   }
-  // end::builder[]
+  // end::getPropertiesWithGivenHostName[]
 
   private void handleProcessingException(ProcessingException ex) {
     Throwable rootEx = ExceptionUtils.getRootCause(ex);
-    if (rootEx != null && (rootEx instanceof UnknownHostException || 
-        rootEx instanceof ConnectException)) {
+    if (rootEx != null && (rootEx instanceof UnknownHostException
+        || rootEx instanceof ConnectException)) {
       System.err.println("The specified host is unknown.");
     } else {
       throw ex;
